--- a/apps/extension/entrypoints/sidepanel/index.html
+++ b/apps/extension/entrypoints/sidepanel/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Samui</title>
-    <meta name="manifest.type" content="browser_action" />
+    <meta name="manifest.open_at_install" content="true" />
+    <meta name="manifest.browser_style" content="true" />
   </head>
   <body>
     <div id="root"></div>
