--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/env.ts"></script>
     <script type="module" src="/src/setup.ts"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
