--- a/apps/extension/src/entrypoints/popup/index.html
+++ b/apps/extension/src/entrypoints/popup/index.html
@@ -5,9 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Samui</title>
     <meta name="manifest.type" content="browser_action" />
+    <style>
+      html,
+      body {
+        width: 375px;
+        height: 600px;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+      #root {
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="../../env.ts"></script>
+    <script type="module" src="../../setup.ts"></script>
     <script type="module" src="./main.tsx"></script>
   </body>
 </html>
