--- a/apps/extension/src/entrypoints/sidepanel/index.html
+++ b/apps/extension/src/entrypoints/sidepanel/index.html
@@ -9,8 +9,8 @@
     <style>
       html,
       body {
-        width: 375px;
-        height: 600px;
+        width: 100%;
+        height: 100%;
         padding: 0;
         margin: 0;
         overflow: hidden;
