--- a/apps/extension/src/entrypoints/popup/index.html
+++ b/apps/extension/src/entrypoints/popup/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="dark w-100 h-100">
+<html lang="en" class="dark w-[375px] h-[600px]">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
