feat: use safe area insets for bottom bar

--- a/apps/extension/src/entrypoints/popup/index.html
+++ b/apps/extension/src/entrypoints/popup/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark w-[375px] h-[600px]">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>Samui</title>
     <meta name="manifest.type" content="browser_action" />
   </head>
